--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Theodor Bormann # your name (or website title) here
+logo: "/images/1660316227838.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
-  <br><br>
+  <br> Master's student in biochemistry with experience in MS-based omics. <br>
   Second description 
-  <br><br>
+  <br> Knowledgeable in R-based Data Science and Machine LEarning protocols. <br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
